--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
            </div>
        </div>
 
-       <div class="container1">
+       <div class="container">
        <div class="row">
            <div class="col-1">
                <h1>PUMA ELASTIC<br> Pants</h1>
